# intellij-bazel

./: .bazelrc  .gitignore  CHANGELOG  MODULE.bazel  WORKSPACE.bzlmod  build-visibility.bzl  external_repository.bzl  maven_install.json
.bazelci/: querysync.yml
.github/workflows/: release.yml
aspect/: BUILD  cc_dependencies.bzl  intellij_info.bzl  intellij_info_impl.bzl  make_variables.bzl
aspect/tools/: BUILD
aswb/: aswb.bazelproject
base/: BUILD
build_defs/: build_defs.bzl  intellij_plugin.bzl  intellij_plugin_library.bzl
clwb/: BUILD  clwb.bazelproject  test_defs.bzl
clwb/sdkcompat/: BUILD
clwb/tests/projects/arm_toolchain/: MODULE.bazel
common/aquery/: ActionGraph.kt
common/experiments/: BUILD
cpp/: BUILD
dart/: BUILD
gazelle/: BUILD
golang/: BUILD
ijwb/: BUILD
intellij_platform_sdk/: BUILD  BUILD.clion  BUILD.clion252  BUILD.clion253  BUILD.clion261  BUILD.go  BUILD.idea261  BUILD.native_debug  BUILD.scala  build_defs.bzl
java/: BUILD
kotlin/: BUILD
proto/: BUILD  intellij_ide_info.proto  project_data.proto
python/: BUILD
querysync/: BUILD
rules_intellij/: BUILD  debug.bzl  manifest.proto  module.bzl  plugin.bzl  plugin_xml_builder.py
rules_intellij/builder/: BUILD  jar.proto  jar.py  module.proto  module.py  plugin.proto  plugin.py  utils.py
rules_intellij/resources/: impl.xml  mod2.xml  mod3.xml  plugin.xml
rules_intellij/xml_builder/: BUILD  module.py  plugin.proto  plugin.py  utils.py
scala/: BUILD
sdkcompat/: BUILD
sdkcompat/v252/: BUILD
skylark/: BUILD
testing/: intellij_unit_test.bzl
(+401 files in other folders)
